# musicplayer

./: CMakeLists.txt  MusicPlayer.pro  README.md  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  music-player.pro  music-player.sln  music-player.vcxproj  music-player.vcxproj.filters
debug/: moc_playlistwidget.cpp
image/: zlay.psd
object/: music-player.exe.recipe
object/music-player.tlog/: CL.12624.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  music-player.lastbuildstate  music-player.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
object/qmake/: qtvars_x64_Debug.props  qtvars_x64_Release.props
object/qmake/temp/: 13E5D345-D95C-39C4-B7D8-DFEBD61F1DAC.music-player.designtime.idx  Makefile  props.txt  qtvars.pro
playlistwidget/: playlistwidget.cpp  playlistwidget.h
release/: moc_mainwindow.cpp  moc_setting.cpp  moc_traymenu.cpp  qrc_image.cpp
setting/: setting.cpp  setting.h  setting.ini
traymenu/: traymenu.cpp  traymenu.h
ui/: ui_mainwindow.h
